[package]
name = "dilithium-raw"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dilithium2", "dilithium3", "dilithium5", "avx2", "aarch64", "dynamic_cpu_features"]
dilithium2 = []
dilithium3 = []
dilithium5 = []
avx2 = []
aarch64 = []
dynamic_cpu_features = []


[dependencies]
cty = "0.2"

[build-dependencies]
cc = "1.0"
glob = "0.3"
